syntax = "proto3";

//option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // client-side streaming RPC
  rpc SayHelloC (stream HelloRequest) returns (HelloReply) {}
  // server-side streaming RPC
  rpc SayHelloS (HelloRequest) returns (stream HelloReply) {}
  // bidirectional streaming RPC
  rpc SayHelloB (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
